# DeploymentFramework

./: CMakeLists.txt  MasterServer.cpp  MasterServer.h  MasterServerMain.cpp  PracticalSocket.cpp  README.md  ServerClient.cpp  ServerClient.h  ServerClientMain.cpp  ServerThread.cpp  ServerThread.h  app.cpp  app.h  utilities.cpp  utilities.h
documents and slides/: project1-deploymentframework.md
